[package]
name = "fdedup"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
mapr = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
parking_lot = "0.11"
fxhash = "0.2"
