[package]
name = "fdedup"
version = "1.0.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cross platform md5 based file deduplication tool"
repository = "https://github.com/estokes/fdedup"
readme = "README.md"
keywords = ["file", "dedup"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
parking_lot = "0.12"
fxhash = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
